--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,8 +16,8 @@
 @import './layout/header';
 @import './layout/hero';
 @import './layout/advantage';
-@import './layout/whatWeDo';
-@import './layout/ourTeam';
+@import './layout/works';
+@import './layout/team';
 @import './layout/clients';
 @import './layout/footer';
 @import './layout/portfolio';
