--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -12,7 +12,7 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-tittle {
+.modal__tittle {
   margin-bottom: 30px;
 
   font-family: var(--main-font);
@@ -22,6 +22,16 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-color);
+}
+
+.modal__field {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.modal__field + .modal__field {
+  margin-top: 28px;
 }
 
 .modal__text {
@@ -46,16 +56,6 @@
     transform: translateY(-35px) translateX(-40px);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-}
-
-.modal__field {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-.modal__field + .modal__field {
-  margin-top: 28px;
 }
 
 .modal__svg {
