--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,18 +1,19 @@
-.clientsLogo__list {
+.clients__list {
   display: flex;
   justify-content: center;
   padding-bottom: var(--indent);
 }
-.clientsLogo__link {
+
+.clients__item {
   width: 170px;
   height: 90px;
 }
 
-.clientsLogo__link + .clientsLogo__link {
+.clients__item + .clients__item {
   margin-left: 30px;
 }
 
-.clientsLogo__item {
+.clients__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,12 +29,12 @@
   }
 }
 
-.clientsLogo__svg {
+.clients__icon {
   fill: var(--social-link-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .clientsLogo__item:hover &,
-  .clientsLogo__item:focus & {
+  .clients__link:hover &,
+  .clients__link:focus & {
     fill: var(--accent-color);
   }
 }
