--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,15 +1,15 @@
-.header .container {
+.page-header__container {
   display: flex;
   align-items: center;
   padding-top: 0;
 }
 
-.contact {
+.contact__list {
   display: flex;
   margin-left: auto;
 }
 
-.contact .list + .list {
+.contact__item + .contact__item {
   margin-left: 30px;
 }
 
