--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,4 +1,4 @@
-.section--general {
+.hero {
     height: 600px;
     max-width: 1600px;
     padding-top: 200px;
@@ -15,14 +15,12 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    /* outline: 1px solid red; */
-  }
   
-  .container--general {
+  &__container {
     padding-top: 0;
   }
   
-  .section__title--general {
+  &__title {
     max-width: 696px;
     margin: 0 auto;
     margin-bottom: 30px;
@@ -34,3 +32,4 @@
     text-transform: uppercase;
     color: #ffffff;
   }
+}
