--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,18 +1,22 @@
-.ourWorks {
+.projects__links {
   border-top: 1px solid #ececec;
 }
 
-.ourWorks .container {
+.projects__links__container {
   padding-bottom: var(--indent);
 }
 
-.ourWorks__list {
+.filters__list {
   display: flex;
   justify-content: center;
   margin-bottom: var(--margin-bottom-title);
 }
 
-.ourWorks__section {
+.filters__item + .filters__item {
+  margin-left: 8px;
+}
+
+.filters__button {
   font-weight: 500;
   font-size: 16px;
   line-height: 26px;
@@ -38,16 +42,13 @@
   }
 }
 
-.ourWorks__list .list + .list {
-  margin-left: 8px;
-}
 
-.ourWorks__cards {
+.projects {
   display: flex;
   flex-wrap: wrap;
 }
 
-.ourWorks__card {
+.projects__item {
   flex-basis: calc((100% - 60px) / 3);
   margin-top: 30px;
   margin-left: 30px;
@@ -67,22 +68,22 @@
   }
 }
 
-.ourWorks__card list .link {
+.projects__item list .link {
   display: block;
 }
 
-.card__img {
+.projects__img {
   max-width: 100%;
   height: auto;
   overflow: scroll;
 }
 
-.card__wrapper {
+.projects__tumb {
   position: relative;
   overflow: hidden;
 }
 
-.card__container--overlay {
+.projects__container--overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -93,15 +94,15 @@
   transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .ourWork:hover &,
-  .ourWork:focus & {
+  .projects__link:hover &,
+  .projects__link:focus & {
     transform: translateY(0%);
     opacity: 1;
     transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
-.card__description {
+.projects__description {
   font-family: var(--main-font);
   font-size: 18px;
   line-height: 1.56;
@@ -110,13 +111,13 @@
   padding: 63px 24px;
 }
 
-.card__caption {
+.projects__box {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: none;
 }
 
-.card__title {
+.projects__title {
   font-weight: bold;
   font-size: 18px;
   line-height: 36px;
@@ -124,7 +125,7 @@
   color: var(--title-color);
 }
 
-.card__text {
+.projects__text {
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
