--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -1,14 +1,10 @@
-.whatWeDo__item {
+.works {
+  &__item {
     position: relative;
     flex-basis: calc((100% - 60px) / 3);
   }
-  
-  .whatWeDo__img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .whatWeDo__list {
+
+  &__list {
     display: flex;
     padding-bottom: var(--indent);
 
@@ -16,16 +12,16 @@
       margin-right: 30px;
     }
   }
-  
-  .whatWeDo__сaption {
+
+  &__сaption {
     background-color: rgba(47, 48, 58, 0.8);
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
   }
-  
-  .whatWeDo__title {
+
+  &__description {
     padding-top: 27px;
     padding-bottom: 27px;
     font-family: var(--main-font);
@@ -37,3 +33,4 @@
     text-transform: uppercase;
     color: #ffffff;
   }
+}
