--- a/css/main.css
+++ b/css/main.css
@@ -605,7 +605,7 @@ img {
   flex-basis: calc((100% - 90px) / 4);
 }
 
-.advantage__container {
+.advantage__box {
   width: 100%;
   padding-top: 25px;
   padding-bottom: 25px;
