--- a/sass/layout/_advantage.scss
+++ b/sass/layout/_advantage.scss
@@ -12,7 +12,7 @@
     flex-basis: calc((100% - 90px) / 4);
   }
   
-  &__container {
+  &__box {
     width: 100%;
     padding-top: 25px;
     padding-bottom: 25px;
