--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,6 +4,7 @@
   font-weight: bold;
   font-size: 16px;
   line-height: 30px;
+  letter-spacing: 0.06em;
   color: var(--colorOn-darkВackground);
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
